# cobra-color

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
src/cobra_color/: __init__.py  _output.py  color.py  exceptions.py  format.py  output.py  template.py  types.py
src/cobra_color/draw/: __init__.py  _font.py  _image.py  _utils.py
src/cobra_color/draw/fonts/: __init__.py
src/cobra_color/render/: __init__.py  _ansi_art.py  _utils.py
src/cobra_color/render/fonts/: __init__.py  _font_map.py
src/cobra_color/string/: __init__.py  _color.py  _extension.py  _segment.py  _template.py  _utils.py
src/term_tz/: __init__.py  color.py  format.py  types.py
src/term_tz/draw/: __init__.py  font.py  image.py  utils.py
src/term_tz/draw/fonts/: __init__.py
tests/: test.py  test2.py  test_ctext.py  test_font.py  test_format.py  test_img.py  test_seg.py
