[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "term-tz"
version = "0.1.1-beta"
description = "A Python library for enhanced terminal display."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0,<11",
    "numpy>=1.21,<2.0",
]

[project.urls]
Homepage = "https://github.com/tinchen777/term-tz.git"
Repository = "https://github.com/tinchen777/term-tz.git"
Issues = "https://github.com/tinchen777/term-tz.git/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["term_tz*"]
